<resources>
    <string name="app_name">Six Kalmas</string>
    <string name="kalma1">Kalma Tayyba</string>
    <string name="kalma2">Kalma Shahadat</string>
    <string name="kalma3">Kalma Tamjeed</string>
    <string name="kalma4">Kalma Tawhid</string>
    <string name="kalma5">Kalma Astaghfar</string>
    <string name="kalma6">Kalma Radde Kufr</string>


    <string name="kalmatayyba">كلمة طيبة</string>
    <string name="kalmashahadat">كلمة شهادات</string>
    <string name="kalmatamjeed">كلمة تمجيد</string>
    <string name="kalmatawhid">كلمة توحيد</string>
    <string name="kalmaastaghfar">كلمة أستغفا ر</string>
    <string name="kalma_radde_kufr">كلمة رد كفر</string>

    <string name="k1">خدا کے سوا کوئی معبود نہیں ، محمد خدا کا رسول ہے</string>
    <string name="k2">میں گواہی دیتا ہوں کہ اللہ کے سوا کوئی معبود نہیں ہے۔ ایک وہ ہے ، اس کا کوئی شریک نہیں ہے ، اور میں گواہی دیتا ہوں کہ محمد
اس کا خادم اور رسول ہے</string>
    <string name="k3">اللہ سبحانہ وتعالی ہے ، اور اللہ کی حمد ہے اور اللہ کے سوا کوئی معبود نہیں ، اور اللہ سب سے بڑا ہے۔ اور نہ ہی کوئی طاقت اور طاقت ہے سوائے اللہ کے ، جو سب سے زیادہ اعلی ، عظیم ہے۔</string>
    <string name="k4">اللہ کے سوا کوئی معبود نہیں ہے - وہی ایک ہے ، کوئی شریک نہیں ہے۔ اس کا راج ہے ، اور اسی کی تعریف ہے۔ وہ زندہ کرتا ہے اور موت دیتا ہے ، اور وہ زندہ ہے ، جو کبھی نہیں مرے گا۔ وہ عظمت و فراست کا ہے۔ اس کے ہاتھ میں (سب) اچھا ہے۔
اور وہ ہر چیز پر قادر ہے</string>

    <string name="k5">"میں اللہ رب العزت سے ہر وہ گناہ سے بخشش طلب کرتا ہوں جس کو میں نے جان بوجھ کر یا جان بوجھ کر ، چھپ چھپ کر یا کھل کر کیا ہے ، اور میں اس گناہ سے جو میں جانتا ہوں اور اس گناہ سے جو میں نہیں جانتا ہوں اس سے رجوع کرتا ہوں ، یقینا آپ ، آپ (ہیں) ) چھپی ہوئی باتوں کا جاننے والا اور غلطیوں کو چھپانے والا اور گناہوں کو معاف کرنے والا ہے۔ اور (نہ تو) کوئی طاقت اور طاقت ہے سوائے اللہ ہی کے ، سب سے بڑے ، سب سے بڑے۔</string>
    <string name="k6">“اے اللہ! میں آپ سے حفاظت چاہتا ہوں کہ مجھے آپ کے ساتھ کسی شریک میں شامل نہیں ہونا چاہئے اور مجھے اس کا علم ہے۔ میں اس چیز سے معافی چاہتا ہوں جس کا مجھے علم نہیں ہے۔ میں اس سے (لاعلمی) سے توبہ کرتا ہوں اور میں کفر اور آپ کے ساتھ شریک ہونے اور دین میں جھوٹ اور غیبت اور بدعت کی باتیں کرتا ہوں ، کہانیاں اور برے کاموں اور الزام تراشی اور نافرمانی ، ان سب سے۔ میں آپ کی مرضی کے تابع ہوں اور میں یقین کرتا ہوں اور میں اعلان کرتا ہوں: اللہ کے سوا کوئی قابل لائق نہیں ہے اور محمد اس کا رسول ہیں۔</string>


</resources>
