<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"
    android:background="@color/number"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/kalma1"
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/green"
            android:background="@drawable/rectangle4"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle4"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/circlebackgroundwhite"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/number"
                    android:textSize="45dp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/kalma1"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/kalmatayyba"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/kalma2"
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/green"
            android:background="@drawable/rectangle4"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle4"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/circlebackgroundwhite"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/number"
                    android:textSize="45dp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/kalma2"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/kalmashahadat"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/kalma3"
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/green"
            android:background="@drawable/rectangle4"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/rectangle4"
                >

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:text="3"
                    android:textSize="45dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/number"
                    android:background="@drawable/circlebackgroundwhite"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/kalma3"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/kalmatamjeed"
                    android:textSize="20dp"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/kalma4"
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/green"
            android:background="@drawable/rectangle4"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/rectangle4"
                >

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:text="4"
                    android:textSize="45dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/number"
                    android:background="@drawable/circlebackgroundwhite"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/kalma4"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/kalmatawhid"
                    android:textSize="20dp"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/kalma5"
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/green"
            android:background="@drawable/rectangle4"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle4"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/circlebackgroundwhite"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/number"
                    android:textSize="45dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/kalma5"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/kalmaastaghfar"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/kalma6"
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/green"
            android:background="@drawable/rectangle4"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle4"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/circlebackgroundwhite"
                    android:gravity="center"
                    android:text="6"
                    android:textColor="@color/number"
                    android:textSize="45dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/kalma6"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/kalma_radde_kufr"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>


</RelativeLayout>