<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kalma_Shahadat"
    android:background="@drawable/bg"
    android:orientation="vertical"
    >
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kalma2"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>


    </Toolbar>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        >

    <TextView
        android:id="@+id/kalma_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kalmashahadat"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textColor="@color/green"
        android:padding="10dp"
        android:layout_marginLeft="40dp"
        />
        <Button
            android:id="@+id/play_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|right"
            android:layout_marginLeft="10dp"
            android:background="@drawable/play"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/kalma_shahadat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="اشْهَدُ انْ لّآ اِلهَ اِلَّا اللّهُ وَحْدَه لَا شَرِيْكَ لَه، وَ اَشْهَدُ اَنَّ مُحَمَّدً اعَبْدُهوَرَسُولُه"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/kalma_urdu_trns"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/k2"
        android:textSize="20dp"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/kalma_english_trns"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="I bear witness that (there is) no god except Allah; One is He,  no partner hath He, and I bear witness that Muhammad
is His Servant and Messenger."
        android:textSize="20dp"
        android:textColor="@color/white"
        />
        <Button
            android:id="@+id/share"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/share"
            />


    </LinearLayout>
    </ScrollView>



</LinearLayout>