<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kalma_tayyba"
    android:background="@drawable/bg"
    android:orientation="vertical"
    >
    <Toolbar
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kalma1"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>


    </Toolbar>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"

        android:orientation="vertical">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/kalma_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/kalmatayyba"
            android:textColor="@color/green"
            android:textSize="30dp"
            android:layout_marginLeft="50dp"
            />
        <Button
            android:id="@+id/play_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginLeft="30dp"
            android:background="@drawable/play"  />
        </LinearLayout>

        <TextView
            android:id="@+id/kalma_tayyba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="لَا إِلٰهَ إِلَّا الله مُحَمَّدٌ رَسُولُ الله"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/kalma_urdu_trns"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/k1"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/kalma_english_trns"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="There is no God besides Allah (and) Muhammad (P.B.U.H)  is the Messenger of Allah.
"
            android:textColor="@color/white"
            android:textSize="20dp" />


    </LinearLayout>



    <Button
        android:id="@+id/share"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/share" />
    </LinearLayout>
    </ScrollView>


</LinearLayout>