<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kalma_Tawhid"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <Toolbar
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kalma4"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>


    </Toolbar>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >


    <TextView
        android:id="@+id/kalma_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/kalmatawhid"
        android:textColor="@color/green"
        android:textSize="30dp"
        android:layout_marginLeft="30dp"
        />

        <Button
            android:id="@+id/play_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|right"
            android:background="@drawable/play"
            android:layout_marginLeft="30dp"
            />
        </LinearLayout>

    <TextView
        android:id="@+id/kalma_tawhid"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="
لَآ اِلٰهَ اِلَّا اللهُ وَحْدَهٗ لَا شَرِيْكَ لَهٗ لَهُ الْمُلْكُ وَ لَهُ الْحَمْدُ يُحْىٖ وَ يُمِيْتُ وَ هُوَحَیٌّ لَّا يَمُوْتُ اَبَدًا اَبَدًاؕ ذُو الْجَلَالِ وَالْاِكْرَامِؕ بِيَدِهِ الْخَيْرُؕ وَهُوَ عَلٰى كُلِّ شیْ ٍٔ قَدِیْرٌؕ"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"

        />

    <TextView
        android:id="@+id/kalma_urdu_trns"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/k4"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/kalma_english_trns"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Exalted is Allah, and praise to be Allah and there is no deity  except Allah, and Allah is the Greatest. And there is no might  nor power except in Allah, the Most High, the Most Great.
"
        android:textColor="@color/white"
        android:textSize="20dp" />


    <Button
        android:id="@+id/share"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/share" />
    </LinearLayout>
    </ScrollView>


</LinearLayout>